--- a/WorkshopData.ipynb
+++ b/WorkshopData.ipynb
@@ -26,22 +26,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(len(workshops.index)):\n",
-    "    col = []\n",
-    "    for j in range(len(queries.index)):\n",
-    "        #print(workshops.iloc[i][\"workshop_short\"])\n",
-    "        col.append(find_word_substrings(tags_dict[workshops.iloc[i][\"workshop_short\"]], queries.iloc[j][\"query\"]))\n",
-    "        \n",
-    "    queries.insert(len(queries.columns)-1, (workshops.iloc[i][\"workshop_short\"]+\"_count\"), col)"
+    "def create_feature_df(df, is_queries=False):\n",
+    "    for i in range(len(workshops.index)):\n",
+    "        col = []\n",
+    "        if is_queries:\n",
+    "            for j in range(len(queries.index)):\n",
+    "                col.append(find_word_substrings(tags_dict[workshops.iloc[i][\"workshop_short\"]], df.iloc[j][\"query\"]))\n",
+    "            df.insert(len(df.query)-1, (workshops.iloc[i][\"workshop_short\"]+\"_count\"), col)\n",
+    "            \n",
+    "        else:\n",
+    "            for j in range(len(df.index)):\n",
+    "                col.append(find_word_substrings(tags_dict[workshops.iloc[i][\"workshop_short\"]], df.iloc[j][\"workshop_suggestions\"]))\n",
+    "            df.insert(len(df.columns), (workshops.iloc[i][\"workshop_short\"]+\"_count\"), col)\n",
+    "            \n",
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,16 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "queries.to_csv(\"query_features_2.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,44 +72,158 @@
     "from sklearn.linear_model import LogisticRegression as lr\n",
     "query_features = pd.read_csv(\"query_features_2.csv\")\n",
     "\n",
-    "x = query_features[query_features.columns[2:23]]\n",
-    "y = query_features[query_features.columns[-1]]\n",
-    "x_train, x_test, y_train, y_test = sk_model.train_test_split(x, y, test_size=0.2)\n",
+    "def get_classifier():\n",
+    "    x = query_features[query_features.columns[2:23]]\n",
+    "    y = query_features[query_features.columns[-1]]\n",
+    "    x_train, x_test, y_train, y_test = sk_model.train_test_split(x, y, test_size=0.2)\n",
     "\n",
-    "clf = lr(max_iter=1000).fit(x_train, y_train)"
+    "    clf = lr(max_iter=1000).fit(x_train, y_train)\n",
+    "    \n",
+    "    return clf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
+   "execution_count": 245,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6\n",
-      "['DL' 'DS' 'DL' 'ML' 'DS' 'ML' 'DS' 'ML' 'DS' 'DS']\n",
-      "6     CS\n",
-      "42    DL\n",
-      "39    DL\n",
-      "43    DL\n",
-      "40    DS\n",
-      "27    ML\n",
-      "33    ML\n",
-      "9     ML\n",
-      "13    DS\n",
-      "37    DS\n",
-      "Name: class, dtype: object\n"
+      "    intro_py_count  intro_nn_count  reinforcement_count  cnn_seg_count  \\\n",
+      "6                2               1                    0              0   \n",
+      "23               0               0                    0              0   \n",
+      "17               0               1                    1              0   \n",
+      "41               0               0                    0              0   \n",
+      "32               0               0                    0              0   \n",
+      "24               0               0                    0              0   \n",
+      "7                0               0                    0              0   \n",
+      "5                0               0                    0              0   \n",
+      "18               0               0                    0              0   \n",
+      "34               0               0                    0              0   \n",
+      "\n",
+      "    stats_ds_count  wrangling_count  visualization_count  ds_start_count  \\\n",
+      "6                1                1                    0               1   \n",
+      "23               1                1                    0               1   \n",
+      "17               1                0                    0               0   \n",
+      "41               1                0                    0               0   \n",
+      "32               1                0                    0               0   \n",
+      "24               0                1                    0               1   \n",
+      "7                0                0                    0               0   \n",
+      "5                1                0                    0               0   \n",
+      "18               1                0                    0               0   \n",
+      "34               1                0                    0               0   \n",
+      "\n",
+      "    story_data_td_count  win_tamu_count  ...  job_ds_count  ml_theory_count  \\\n",
+      "6                     0               0  ...             0                0   \n",
+      "23                    0               0  ...             1                0   \n",
+      "17                    0               0  ...             0                1   \n",
+      "41                    0               0  ...             0                0   \n",
+      "32                    0               0  ...             0                0   \n",
+      "24                    0               0  ...             1                0   \n",
+      "7                     0               0  ...             0                0   \n",
+      "5                     0               0  ...             0                0   \n",
+      "18                    0               0  ...             0                0   \n",
+      "34                    0               0  ...             0                0   \n",
+      "\n",
+      "    ml_applied_count  intro_nlp_count  ml_interpret_count  recc_engine_count  \\\n",
+      "6                  0                0                   0                  0   \n",
+      "23                 0                0                   0                  0   \n",
+      "17                 1                0                   0                  0   \n",
+      "41                 0                0                   0                  0   \n",
+      "32                 0                0                   0                  0   \n",
+      "24                 0                0                   0                  0   \n",
+      "7                  0                0                   0                  0   \n",
+      "5                  0                0                   0                  0   \n",
+      "18                 0                0                   0                  0   \n",
+      "34                 0                0                   0                  0   \n",
+      "\n",
+      "    huca_count  ml_start_count  model_interpret_count  nlp_count  \n",
+      "6            0               0                      0          0  \n",
+      "23           0               0                      0          0  \n",
+      "17           0               1                      0          0  \n",
+      "41           1               0                      0          0  \n",
+      "32           1               0                      0          0  \n",
+      "24           0               0                      0          0  \n",
+      "7            0               0                      0          0  \n",
+      "5            0               0                      0          0  \n",
+      "18           0               1                      0          0  \n",
+      "34           0               0                      0          0  \n",
+      "\n",
+      "[10 rows x 21 columns]\n"
      ]
     }
    ],
    "source": [
     "preds = clf.predict(x_test)\n",
     "score = clf.score(x_test, y_test)\n",
-    "print(score)\n",
-    "print(preds)\n",
-    "print(y_test)"
+    "#print(score)\n",
+    "#print(preds)\n",
+    "print(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 291,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_app_data(index):\n",
+    "    applicant = apps.iloc[index].to_frame().transpose()\n",
+    "    applicant = applicant[[\"workshop_suggestions\"]]\n",
+    "    print(applicant)\n",
+    "    \n",
+    "    app_df = create_feature_df(applicant)\n",
+    "    \n",
+    "    clf = get_classifier()\n",
+    "    print(clf.predict(applicant[applicant.columns[1:22]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 294,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                               workshop_suggestions\n",
+      "164f95d5d0825d0574542caabeec52b2  Basics of ML, understanding how to read and us...\n",
+      "intro_py_count\n",
+      "['Industry']\n"
+     ]
+    }
+   ],
+   "source": [
+    "display_app_data(12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 295,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Basics of ML, understanding how to read and use someone else's code....how to use data science or ML in finance and stock trading\""
+      ]
+     },
+     "execution_count": 295,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "apps.iloc[12][\"workshop_suggestions\"]"
    ]
   },
   {
