Sam's front end works

--- a/WorkshopData.ipynb
+++ b/WorkshopData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,43 +188,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                                               workshop_suggestions\n",
-      "164f95d5d0825d0574542caabeec52b2  Basics of ML, understanding how to read and us...\n",
+      "                                 workshop_suggestions\n",
+      "76b067cd5f3e1b1976d2e2eeceedf567  Python data science\n",
       "intro_py_count\n",
-      "['Industry']\n"
+      "['DS']\n",
+      "None                                  datascience_experience\n",
+      "76b067cd5f3e1b1976d2e2eeceedf567                      1\n"
      ]
     }
    ],
    "source": [
-    "display_app_data(12)"
+    "print(display_app_data(3), apps.iloc[3].to_frame().transpose()[[\"datascience_experience\"]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Basics of ML, understanding how to read and use someone else's code....how to use data science or ML in finance and stock trading\""
+       "['Stats for Data Scientists',\n",
+       " 'Data Wrangling',\n",
+       " 'Data Visualization',\n",
+       " 'Data Science: Start Here']"
       ]
      },
-     "execution_count": 295,
+     "execution_count": 344,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "apps.iloc[12][\"workshop_suggestions\"]"
+    "def get_workshops(track, experience):\n",
+    "    workshop_list = []\n",
+    "    for i in range(len(workshops[\"track\"])):\n",
+    "        if workshops.iloc[i][\"track\"] == track and workshops.iloc[i][\"difficulty\"] <= experience:\n",
+    "            workshop_list.append(workshops.iloc[i][\"workshop_name\"])\n",
+    "            \n",
+    "    return workshop_list\n",
+    "        \n",
+    "get_workshops(\"DS\", 1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 318,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 318,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
